dataset1235/2025-2/610742602/users/1606503414/executions/906907063_359632665.log
== SUBMISSION (2025-08-19 21:10:24)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:09:54)
-- CODE: 
print(250/6, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:16:12)
-- CODE: 
x=250/6
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:08:03)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:09:44)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:08:39)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:13:29)
-- CODE: 
round(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:10:38)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:16:14)
-- CODE: 
x=250/6
print(round(x,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:11:37)
-- CODE: 
print(250/6)round
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250/6)round
                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250/6)round
                ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:10:28)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:08:54)
-- CODE: 
print(250/6,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:10:29)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:08:59)
-- CODE: 
print(250/6,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:08:23)
-- CODE: 
print(250,/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250,/6)
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250,/6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:13:31)
-- CODE: 
round(250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:13:42)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:13:27)
-- CODE: 
round(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:08:26)
-- CODE: 
print(250,/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250,/6)
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(250,/6)
              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:08:01)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:08:58)
-- CODE: 
print(250/6,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:11:46)
-- CODE: 
print(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
